[PNPG-250] fix: sonar issues